--- a/style.css
+++ b/style.css
@@ -1,55 +1,59 @@
+@import '../../.cache/wal/colors-waybar.css';
+
 * {
   border: none;
-  border-radius: 0;
-  font-weight: bold;
+  border-radius: 10px; /* Radius of the BIG waybar */
+  /* font-weight: bold;*/
   font-size: 12px;
 }
 
 window#waybar {
-  background: rgba(21, 18, 27, 0);
-  color: #2b2b2c; /* Text color */
+  background-color: rgba(0,0,0,0.8);
+  background: transparent;
+  transition-property: background-color;
+  border-bottom: 0px solid @color10; /* Border of the bottom part of the waybar */
+  /* color: #2b2b2c; Text color */
 }
 
 /* Customize pop up windows when going with cursor on waybar objects */
 tooltip {
-  background: #e7e7ec;
-  opacity: 0.60;
+  background: @color7;
+  opacity: 0.80;
   border-radius: 10px;
   border-width: 2px;
   border-style: solid;
-  border-color: #11111b;
+  border-color: @color6;
 }
-
 tooltip label{
-  color: #2b2b2c
+  color: @color0
 }
 
 
 /* Customize bubbles containing waybar objects  */
-#custom-launch_wofi,
 #hyprland-window,
+#custom-bluetooth,
 #cpu,
 #disk,
 #clock,
 #memory,
 #temperature,
+#workspaces,
 #pulseaudio {
-  background: #e7e7ec; /*Bubble color*/
-  opacity: 0.5;
-  padding: 0px 10px;
-  margin: 3px 0px;
-  margin-top: 5px;
-  border: 0px;
+  background: @color6; /*Bubble color*/
+  opacity: 0.8;
+  padding: 0px 15px; /* Horizontal distance between icons */
+  margin: 2px 0px; /* Make smaller tha ting */
+  margin-top: 0px;
+  border: 5px;
 }
 
-/* Customize borders of bubbles  */
-#custom-lauch_wofi {
-  border-radius: 10px 10px 10px 10px;
-  margin-left: 10px;
-}
-
+/* Customize specifically bubbles  */
 #cpu {
   border-radius: 10px 0px 0px 10px;
+}
+
+#memory {
+  border-radius: 0px; /* If you write one zero then it applies to all borders */
 }
 
 #disk {
@@ -57,7 +61,7 @@ tooltip label{
 }
 
 #clock {
-  border-radius: 10px 10px 10px 10px;
+  border-radius: 10px;
 }
 
 #temperature {
@@ -66,14 +70,14 @@ tooltip label{
 
 #pulseaudio {
   border-radius: 0px 10px 10px 0px;
-  margin-right: 10px;
+  margin-right: 10px; /* Distance from the bubble on the right */
 }
 
-
 #workspaces {
-  background: #FFFFFF;
-  margin: 5px 5px 5px 5px;
-  padding: 4px 1px;
-  border-radius: 12px;
-  opacity: 0.8;
+  background: @color1;
+  border-radius: 50px; /* Super curvy */
+}
+
+#custom-bluetooth {
+  margin-right: 10px;
 }
